# GentleFemto

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
BATKitty/: CMakeLists.txt  MyMod.cxx  MyMod.h
BATKitty/Scripts/: runMyTut.cxx
DreamFunction/: CMakeLists.txt  DreamCF.cxx  DreamCF.h  DreamData.cxx  DreamData.h  DreamDist.cxx  DreamDist.h  DreamHEP.cxx  DreamHEP.h  DreamKayTee.cxx  DreamKayTee.h  DreamPair.cxx  DreamPair.h  DreamPlot.cxx  DreamPlot.h  DreamSystematics.cxx  DreamSystematics.h  DreamdEtadPhi.cxx  DreamdEtadPhi.h  ExecuteCFDream.C  GetCorrelations.C  LinkDef.h  ReadDreamFile.cxx  ReadDreamFile.h  global.cxx  global.h
DreamFunction/Scripts/: BbarB_MiniJetEPOS.C  BbarB_PurityPlots.C  BbarB_QAplots.C  ConvertSigmaToHEP.C  ConvertToHEP.C  ExecuteCFBBarDream.C  ExecuteCFDream.C  ExecuteCFDreamAncestors.C  ExecuteCFDreamBBar.C  ExecuteCFkT.C  ExecuteCFmT.C  ExecuteComparisonMC.C  ExecuteDPhiDEta.C  ExecuteDPhiDEtaAncestors.C  ExecuteDPhiDEtaAtRad.C  ExecuteDPhiDEtaBBar.C  ExecuteDmeson.C  ExecuteDmesonDeltaEtaDeltaPhi.C  ExecuteLeuteron.C  ExecuteMiniJet.C  ExecuteMiniJetEPOS.C  ExecutePd.C  ExecutePhi.C  ExecutePlotCF.C  ExecutePlotCFBBar.C  ExecutePurityDream.C  ExecuteQADream.C  ExecuteQuickPlotsPL.C  ExecuteSigma.C  GetCFvskT.C  GetComparisonMC.C  GetCorrectBinCF.C  GetCorrelations.C  GetCorrelationsBbarB.C  GetCorrelationsLeuteron.C  GetCorrelationsNano.C  GetCorrelationsNanoBB.C  GetCorrelationsNanoBBAncestors.C  GetCorrelationsNanoBBar.C  GetCorrelationsNanoSample.C  (+15 more)
DreamFunction/Scripts/BBar_Analysis/: BBarmTdistributions.C  BbarB_MiniJet.C  BbarB_PurityPlots.C  BbarB_QAplots.C  ExecuteBbarB_QAPlots.C  ExecuteCFBBarDream.C  ExecuteComparisonMC.C  ExecuteCorrectBinCF.C  ExecuteMiniJet.C  ExecuteMiniJetEPOS.C  ExecutePlotCorrelationsBBar.C  ExecutePurityDream.C  GetCorrelationsBbarB.C  METoSEReweighting.C  PlotCFBBar.C  PlotsCorrelationBBar.C  QuickPlottingBBar.C  QuickmT.C
DreamFunction/Scripts/nanoAODp_p/: mTVariations.C
FemtoGami/: AnalyseProXi.cxx  AnalyseProXi.h  CMakeLists.txt  LambdaGami.cxx  LambdaGami.h  MomentumGami.cxx  MomentumGami.h
FemtoGami/Scripts/: OmegaDrawWithError.C  XiClosure.C  XiComparison.C  XiDrawWithError.C  XiGami.C  XiOmegaWithError.C
ForgivingQA/: CMakeLists.txt  CandidateCounter.cxx  CandidateCounter.h  DecayQA.cxx  DecayQA.h  EventQA.cxx  EventQA.h  ForgivingFitter.cxx  ForgivingFitter.h  ForgivingReader.cxx  ForgivingReader.h  MakeHistosGreat.cxx  MakeHistosGreat.h  PeriodQA.cxx  PeriodQA.h  TrackQA.cxx  TrackQA.h
ForgivingQA/Scripts/: MakeBBarQA.C  MakePhiQA.C  MakeQA.C  MakeSigmaQA.C  PerEventQA.C  PeriodQASigma.C
GentleKitty/: ANewDay.cxx  CATSInput.cxx  CATSInput.h  CATSInputPhi.cxx  CATSInputPhi.h  CATSInputSigma0.cxx  CATSInputSigma0.h  CATSLambdaParam.cxx  CATSLambdaParam.h  CMakeLists.txt  ForBernie.cpp  ForBernie.h  LinkDef.h  POnly.cpp  PlayWithCats.cxx  PlayWithCats.h  SideBandFit.cxx  SideBandFit.h  SidebandSigma.cxx  SidebandSigma.h  TidyCats.cxx  TidyCats.h  VariationAnalysis.cxx  VariationAnalysis.h  VariationAnalysisLAL.cxx  VariationAnalysisLAL.h  VariationAnalysispAL.cxx  VariationAnalysispAL.h  VariationAnalysispAp.cxx  VariationAnalysispAp.h  VariationmTAnalysis.cxx  VariationmTAnalysis.h  XiOnly.cpp  systematics_pp.cpp
GentleKitty/Scripts/: CatsPlay.C  DrawCurves.C  DrawSigma.C  DrawSigma_single.C  EvalpXiCurves.C  ForBernie.C  LambdaPars.C  LednickyPlay.C  POnly.C  POnlyOnTheGrid.C  POnlymT.C  PhiCFmulti.C  PlotCFsForCoalescence.C  PlotsB2Coalescence.C  PotentialPlay.C  RadiusDrawer.C  RadiusDrawerForCoalescence.C  RadiusDrawerPotSep.C  SideBand.C  SourceMtMaker.C  TestCats.C  TestCats2.C  TestCats3.C  XiOnly.C  XiOnlyOnTheGrid.C  XiOnlyOnTheGridLegacy.C  openingangle.C  pPhi.C  pPhiBkup.C  pPhiPotentials.C  pSigma0.C  pSigma0_single.C  pSigma0exclusion.C  pSigmaSidebands.C  parallelPhi.C  plotSigmaExclusion.C  plotSigmaModels.C  smearedCFPhi.C  smearingMatrixpPhi.C  smearingPHI.C  (+1 more)
GentleKitty/Scripts/BBarAnalysis/: SysVarExtractor.C  SysVarExtractorLAL.C  SysVarExtractorpAL.C  SysVarExtractorpAp.C
GentleKitty/Scripts/pDmeson/: DmesonHaidenbauer.C  DmesonModels.C  DmesonPlayground.C  DmesonTools.h  correctDminus.C  fitDminus.C
GentleKitty/Scripts/pLAnalysis/: MakeAPlot.C  PLOnly.C  mTExtractor.C  mTExtractorAddPot.C
GentleKitty/Scripts/pSigma0Analysis/: DrawSigma.C  DumpCF.C  FemtoSource.C  PlayCats.C  SourceMtMaker.C  coupledChannel.C  drawLednicky.C  drawSigmaModelPlot.C  pSigma0.C  pSigma0coupled.C  pSigma0smear.C  pSigmaSidebands.C  plotSigmaExclusion.C  plotSigmaModels.C  radiusCF.C  smearingLambdaSidebands.C  smearingMatrixSidebands.C
GentleKitty/Scripts/pXiAnalysis/: EvalpXiCurves.C  PXiExtractor.C  PotentialPlay.C  SasakiPotential.C  SideBand.C  XiOnly.C  XiOnlyOnTheGrid.C  XiOnlyOnTheGridLegacy.C  smearingLambdaSidebands.C  smearingMatrixSignal.C
GentleKitty/Scripts/ppAnalysis/: LambdaExtractor.C  POnly.C  POnlyExtractor.C  POnlyOnTheGrid.C  mTExtractor.C  ppSourceCFmaker.C  pp_mTSourceExtractor.C  systematics_pp.C
GentleKitty/Scripts/ppAnalysisForCoalescence/: POnlyOnTheGridCoalescence.C  mTExtractorCoalescence.C  systematics_ppBhawani.C
GentleKitty/Test/: CMakeLists.txt  testLambdaParam.cxx
Systematics/: AddOutputs.C  CMakeLists.txt  EvalDmesonSystematics.C  EvalDreamSys.C  EvalDreamSysLAL.C  EvalDreamSyspAL.C  EvalDreamSyspAp.C  EvalDreamSyspL.C  EvalDreamSyspXi.C  EvalDreamSyspp.C  EvalPhiSystematics.C  EvalSidebands.C  EvalSigmaSystematics.C  GetmTSystematicsLAL.C  GetmTSystematicsLAL_Update.C  GetmTSystematicspAL.C  GetmTSystematicspAL_Update.C  GetmTVariations.C  GetmTVariationsCoalescence.C  GetmTVariationsLAL.C  GetmTVariationsLALAncestors.C  GetmTVariationspAL.C  GetmTVariationspALAncestors.C  GetmTVariationspApAncestors.C  GetmTVariationspL.C
